archive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-demo-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-demo-nginx
  template:
    metadata:
      labels:
        app: kubernetes-demo-nginx
    spec:  
      containers:
        - name: kubernetes-demo-nginx
          image: nginxdemos/hello
          ports:
            - containerPort: 80
