archive/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo-service-loadbalancer
spec:
  selector:
    app: kubernetes-demo-nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
