archive/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo-service-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kubernetes-demo-nginx
  ports:
    - port: 80
      targetPort: 80
      # (default: 30000-32767)
      nodePort: 30007
