archive/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo-service
  namespace: default
spec:
  selector:
    app: kubernetes-demo-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
